--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
     testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
     testImplementation("io.github.bonigarcia:webdrivermanager:5.1.0")
+    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.2'
 }
 
 test {
